--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>SpecialEffects - Samples of special effects based on HTML and javascript</title>
+    <title>Motion Graphics - Samples of Motion Graphics based on HTML and javascript</title>
     <meta name="description" content="SpecialEffects, Samples of special effects based on HTML and javascript" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://truemaxdh.github.io/icon.png" type="image/png">
