--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
       <a href="javascript:demo_hanguelBounce();">HanguelBounce</a>
       <a href="javascript:demo_balloonsUp();">BalloonsUp</a>
       
-      <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();></div>
+      <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
       <br>
       <a class="normalBtn" href="https://github.com/truemaxdh/MotionGraphics">GitHub</a>
     </center>
