--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,12 @@
         motionGraphics.balloonsUp(el);
       }
       
+      function demo_xMasTree() {
+        var el = document.getElementById("board");
+        el.innerHTML = "";
+        motionGraphics.balloonsUp(el);
+      }
+      
       var fullScreen = false;
       function toggleFullScreen() {
         var el = document.getElementById("board");
@@ -56,6 +62,7 @@
           }
           fullScreen = true;
         }
+        motionGraphics.resize();
       }
       window.onload = function() {
         var _href = window.location.href;
@@ -78,6 +85,7 @@
       <br>
       <a href="javascript:demo_hanguelBounce();">HanguelBounce</a>
       <a href="javascript:demo_balloonsUp();">BalloonsUp</a>
+      <a href="javascript:demo_xMasTree();">XMasTree</a>
       
       <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
       <br>
