--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
           }
           fullScreen = true;
         }
-        motionGraphics.resize();
+        motionGraphics.resize(el);
       }
       window.onload = function() {
         var _href = window.location.href;
