--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,8 @@
           } else if (document.msExitFullscreen) { /* IE11 */
             document.msExitFullscreen();
           }
+          el.style.width = "800px";
+          el.style.height = "600px";
           fullScreen = false;
         } else {
           if (el.requestFullscreen) {
@@ -61,10 +63,21 @@
           } else if (el.msRequestFullscreen) { /* IE11 */
             el.msRequestFullscreen();
           }
+          el.style.width = screen.width + "px";
+          el.style.height = screen.height + "px";
           fullScreen = true;
         }
-        motionGraphics.resize(el);
+
+        var obj = motionGraphics.runningObj;
+        var cnv = obj.ctx.canvas;
+        cnv.style.width = el.style.width;
+        cnv.style.height = el.style.height;
+        cnv.width = cnv.style.width.replace("px","");
+        cnv.height = cnv.style.height.replace("px","");
+        obj.w = cnv.width;
+        obj.h = cnv.height;
       }
+
       window.onload = function() {
         var _href = window.location.href;
         var _split = _href.split("#");
