--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
         obj.h = cnv.height;
       }
 
-      window.onload = function() {
+      const onLoadEx = function() {
         var _href = window.location.href;
         var _split = _href.split("#");
         if (_split.length < 2) {
