--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://truemaxdh.github.io/Style/skin.css">
     
     <script src="js/HanguelBounce.js"></script>
-    <script src="js/BalloonsUp.js"></script>
+    <script src="js/BalloonsGoingUp.js"></script>
     <script src="js/XMasTree.js"></script>
     
     <script>
