--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
         motionGraphics.hanguelBounce(el);
       }
       
-      function demo_balloonsUp() {
+      function demo_balloonsGoingUp() {
         var el = document.getElementById("board");
         el.innerHTML = "";
-        motionGraphics.balloonsUp(el);
+        motionGraphics.balloonsGoingUp(el);
       }
       
       function demo_xMasTree() {
@@ -98,7 +98,7 @@
       {{content}}
       <br>
       <a href="javascript:demo_hanguelBounce();">HanguelBounce</a>
-      <a href="javascript:demo_balloonsUp();">BalloonsUp</a>
+      <a href="javascript:demo_balloonsGoingUp();">BalloonsGoingUp</a>
       <a href="javascript:demo_xMasTree();">XMasTree</a>
       
       <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
