--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="https://truemaxdh.github.io/icon.png" type="image/png">
     <link rel="stylesheet" href="https://truemaxdh.github.io/Style/skin.css">
     
+    <script src="js/common.js"></script>
     <script src="js/HanguelBounce.js"></script>
     <script src="js/BalloonsGoingUp.js"></script>
     <script src="js/XMasTree.js"></script>
