--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     <script src="js/XMasTree.js"></script>
     <script src="js/Landscape.js"></script>
     <script src="js/AutonomousShips.js"></script>
+    <script src="js/SelfDriving.js"></script>
     
     <script>
       let fullScreen = false;
@@ -94,6 +95,7 @@
       <a href="javascript:run('xMasTree');">XMasTree</a>
       <a href="javascript:run('landscape');">Landscape</a>
       <a href="javascript:run('autonomousShips');">Autonomous Ships</a>
+      <a href="javascript:run('selfDriving');">Self-Driving</a>
       
       <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
       <br>
