--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
     <script src="js/Landscape.js"></script>
     <script src="js/AutonomousShips.js"></script>
     <script src="js/SelfDriving.js"></script>
+    <script src="js/FPVSelfDriving.js"></script>
     
     <script>
       let fullScreen = false;
@@ -96,6 +97,7 @@
       <a href="javascript:run('landscape');">Landscape</a>
       <a href="javascript:run('autonomousShips');">Autonomous Ships</a>
       <a href="javascript:run('selfDriving');">Self-Driving</a>
+      <a href="javascript:run('FPVSelfDriving');">FPV Self-Driving</a>
       
       <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
       <br>
