--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://truemaxdh.github.io/Style/skin.css">
     
     <script src="js/common.js"></script>
+    <script src="js/comGameObj.js"></script>
     <script src="js/HanguelBounce.js"></script>
     <script src="js/BalloonsGoingUp.js"></script>
     <script src="js/XMasTree.js"></script>
@@ -26,6 +27,8 @@
     <script src="js/AutonomousShips.js"></script>
     <script src="js/SelfDriving.js"></script>
     <script src="js/FPVSelfDriving.js"></script>
+    <script src="js/MovingCopter.js"></script>
+    <script src="js/FPVMovingCopter.js"></script>
     
     <script>
       let fullScreen = false;
@@ -98,6 +101,9 @@
       <a href="javascript:run('autonomousShips');">Autonomous Ships</a>
       <a href="javascript:run('selfDriving');">Self-Driving</a>
       <a href="javascript:run('FPVSelfDriving');">FPV Self-Driving</a>
+      <a href="javascript:run('movingCopter');">Moving Helicopter</a>
+      <a href="javascript:run('FPVMovingCopter');">FPV Moving Helicopter</a>
+      
       
       <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
       <br>
