--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <script src="js/SelfDriving.js"></script>
     <script src="js/FPVSelfDriving.js"></script>
     <script src="js/MovingCopter.js"></script>
-    <script src="js/FPVMovingCopter.js"></script>
+    <script src="js/FPVSpaceRocket.js"></script>
     
     <script>
       let fullScreen = false;
@@ -102,7 +102,7 @@
       <a href="javascript:run('selfDriving');">Self-Driving</a>
       <a href="javascript:run('FPVSelfDriving');">FPV Self-Driving</a>
       <a href="javascript:run('movingCopter');">Moving Helicopter</a>
-      <a href="javascript:run('FPVMovingCopter');">FPV Moving Helicopter</a>
+      <a href="javascript:run('FPVSpaceRocket');">FPV Space Rocket</a>
       
       
       <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
