--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <script src="js/BalloonsGoingUp.js"></script>
     <script src="js/XMasTree.js"></script>
     <script src="js/Landscape.js"></script>
-    <script src="js/AutonomousShips.js"></script>
+    <script src="js/DigitalMicrobes.js"></script>
     <script src="js/SelfDriving.js"></script>
     <script src="js/FPVSelfDriving.js"></script>
     <script src="js/MovingCopter.js"></script>
@@ -98,7 +98,7 @@
       <a href="javascript:run('balloonsGoingUp');">BalloonsGoingUp</a>
       <a href="javascript:run('xMasTree');">XMasTree</a>
       <a href="javascript:run('landscape');">Landscape</a>
-      <a href="javascript:run('autonomousShips');">Autonomous Ships</a>
+      <a href="javascript:run('digitalMicrobes');">Digital Microbes</a>
       <a href="javascript:run('selfDriving');">Self-Driving</a>
       <a href="javascript:run('FPVSelfDriving');">FPV Self-Driving</a>
       <a href="javascript:run('movingCopter');">Moving Helicopter</a>
