--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
     
     <script src="js/common.js"></script>
     <script src="js/comGameObj.js"></script>
+    <script src="js/subMenus.js"></script>
     <script src="js/HanguelBounce.js"></script>
     <script src="js/BalloonsGoingUp.js"></script>
     <script src="js/XMasTree.js"></script>
@@ -31,43 +32,6 @@
     <script src="js/FPVSpaceRocket.js"></script>
     
     <script>
-      let fullScreen = false;
-      function toggleFullScreen() {
-        var el = document.getElementById("board");
-        if (fullScreen) {
-          if (document.exitFullscreen) {
-            document.exitFullscreen();
-          } else if (document.webkitExitFullscreen) { /* Safari */
-            document.webkitExitFullscreen();
-          } else if (document.msExitFullscreen) { /* IE11 */
-            document.msExitFullscreen();
-          }
-          el.style.width = "800px";
-          el.style.height = "600px";
-          fullScreen = false;
-        } else {
-          if (el.requestFullscreen) {
-            el.requestFullscreen();
-          } else if (el.webkitRequestFullscreen) { /* Safari */
-            el.webkitRequestFullscreen();
-          } else if (el.msRequestFullscreen) { /* IE11 */
-            el.msRequestFullscreen();
-          }
-          el.style.width = screen.width + "px";
-          el.style.height = screen.height + "px";
-          fullScreen = true;
-        }
-
-        var obj = motionGraphics.runningObj;
-        var cnv = obj.ctx.canvas;
-        cnv.style.width = el.style.width;
-        cnv.style.height = el.style.height;
-        cnv.width = cnv.style.width.replace("px","");
-        cnv.height = cnv.style.height.replace("px","");
-        obj.w = cnv.width;
-        obj.h = cnv.height;
-      }
-
       function run(runName) {
         el.innerHTML = "";
         eval("motionGraphics." + runName + "(el);" );
@@ -105,7 +69,7 @@
       <a href="javascript:run('FPVSpaceRocket');">FPV Space Rocket</a>
       
       
-      <div id="board" style="width:800px; height:600px;" ondblclick="toggleFullScreen();"></div>
+      <div id="board" style="width:100%; height:100%;" ondblclick="toggleFullScreen();"></div>
       <br>
       <a class="normalBtn" href="https://github.com/truemaxdh/MotionGraphics">GitHub</a>
     </center>
